Update project dependencies